Fix swagger links
