# apps/api/docs/swagger.json
@@ -37,7 +37,7 @@
                 }
             }
         },
-        "/game/:id": {
+        "/game/{id}": {
             "get": {
                 "description": "Get game by ID",
                 "consumes": [
@@ -66,7 +66,7 @@
                 }
             }
         },
-        "/game/:id/hit": {
+        "/game/{id}/hit": {
             "post": {
                 "description": "Ask for another card",
                 "consumes": [
@@ -95,9 +95,9 @@
                 }
             }
         },
-        "/game/:id/stand": {
+        "/game/{id}/stand": {
             "post": {
-                "description": "Ask for another card",
+                "description": "Stand",
                 "consumes": [
                     "application/json"
                 ],
@@ -107,7 +107,7 @@
                 "tags": [
                     "blackgo"
                 ],
-                "summary": "Ask for another card",
+                "summary": "Stand",
                 "parameters": [
                     {
                         "type": "string",
